reading html from the page